--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,6 @@ AZURE_OPENAI_EMBEDDING_DEPLOYMENT_NAME="..."
 AZURE_OPENAI_CHAT_DEPLOYMENT_NAME=
 AZURE_OPENAI_API_VERSION="..."
 PROJECT_CONNECTION_STRING="..."
-GITHUB_TOKEN="..."
+GITHUB_TOKEN="Microsoft-AI-Token-Altin"
 AZURE_SEARCH_SERVICE_ENDPOINT = "https://..."
 AZURE_SEARCH_API_KEY = "..."
